
1.7.4
- Candle recipes updated (waiting on More Candles)


1.7.3
NEW FOOD ADDITIONS FINALLY???
- Wildcraft stuff:
-- Wildcraft nut butter added (like peanut butter, but with other nuts)
-- Nuts working in fruit bread & muffins & trail mix
-- added herbs to Dressing
-- mixed herbs added
-- herbal soft dough added
-- Wildcraft fruits updated
- Dialogue added to Kitchenware Trader; readjusted code to push text to en.json
- added meatloaf?
- Soulstorm slop accepts all poisonous mushrooms and Wildcraft poisonous berries
- Salt is its own topping in porridge, like other meals - DONE!!!
- Part-baked muffins don't crash the handbook - DONE!!!
- Cottage cheese mixing bowl recipe added (vinegar + pasteruized milk) - DONE!!!
- Fruit bread and muffin overlays fixed
- Cured deluxe sausage recipes fixed - DONE!!!
- Liquid gelatin and pre-gelatin no longer allowed in fruit bar or muffin recipes - DONE!!!
- Cider/wine adjusted to have half nutrition but last 10 times as long - DONE!!!
- Raw fish nutrition adjusted to match vanilla - DONE!!!
- Seaweed patch fixed - DONE!!!
- Seaweed nutrition works in sushi - DONE!!!
- Cooked veggies can be added to salad
- Sausage shapes have textures, should fix crashing

- New 1.20 clays integrated
- Chef hat + saddle makes Chef Saddle


Vityuri suggestions:
- Cooked pasta in stews, and broth in hot pasta
- Pickled and cooked vegetable for required ingredients in soup. Many cuisines have preserved pickled vegetable in soup. Like sichuan fish soup with pickled mustard greens, polish pickle soup.
- Fried meat, dried fruit, cooked vegetables, and broth in pilaf. There are so many types of pilaf, and it is often rice mixed with cooked food. Food on rice is a staple dish in many places, maybe have it a mixing meal (?)
- Cooked meat, vegetables as pie filling. Also boiled and pickled eggs in pies. Sliced boiled eggs are used in curry puff too.