@@ -15,7 +15,7 @@
 			ignoreCreativeInvStacks: true
 		},
 		"inBowlShape": { "base": "game:block/food/meal/liquid" },
-		nutritionPropsWhenInMeal: { satiety: 270, health: 0.5, foodcategory: "Fruit" },
+		nutritionPropsWhenInMeal: { satiety: 135, health: 0.5, foodcategory: "Fruit" },
 		waterTightContainerProps: {
 			containable: true,
 			itemsPerLitre: 100,
@@ -100,7 +100,7 @@
 	creativeinventoryStacks: [ { tabs: ["general", "liquids", "expandedfoods"], stacks: [ { type: "block", code: "game:woodbucket", attributes: { ucontents: [ { type:"item", code: "expandedfoods:strongwineportion-{fruit}", makefull: true } ] } } ] } ],
 	maxstacksize: 5000,
 	materialDensity: 200,
-	nutritionProps: { saturation: 1.8, health: 0.005, foodcategory: "Fruit" },
+	nutritionProps: { saturation: 0.9, health: 0.005, foodcategory: "Fruit" },
 	guiTransform: {
 		rotation: { x: 128, y: 40, z: 7 },
 		origin: { x: 0.5, y: 0, z: 0.5 },
