@@ -5,7 +5,7 @@
 	variantgroups: [
 		{ code: "fruit", "loadFromProperties": "wildcraftfruit:block/fruit" },
 	],
-	"skipVariants": ["*-pittedcherry", "*-pittedapricot", "*-pittedbreadfruit", "*-cashewwhole", "*-chinaberry", "*-beachalmondwhole", "*-lillypillywhite", "*-lillypillyblue", "*-lemon"],
+	"skipVariants": ["*-pittedcherry", "*-pittedapricot", "*-pittedbreadfruit", "*-cashewwhole", "*-chinaberry", "*-beachalmondwhole", "*-lillypillywhite", "*-lillypillyblue", "*-lemon", "*-blacknightshadeunripe"],
 	attributes: {
 		handbook: {
 			ignoreCreativeInvStacks: true
@@ -16,10 +16,10 @@
 		},
 		"inBowlShape": { "base": "game:block/food/meal/liquid" },
 		nutritionPropsWhenInMealByType: {
-			"*-wolfberry": { satiety: 300, health: -2.5, foodcategory: "NoNutrition" },
-			"*-crowseye": { satiety: 300, health: -5, foodcategory: "NoNutrition" },
-			"*-seamango": { satiety: 300, health: -4, foodcategory: "NoNutrition" },
-			"*": { satiety: 300, health: 1, foodcategory: "NoNutrition" },
+			"*-wolfberry": { satiety: 150, health: -2.5, foodcategory: "NoNutrition" },
+			"*-crowseye": { satiety: 150, health: -5, foodcategory: "NoNutrition" },
+			"*-seamango": { satiety: 150, health: -4, foodcategory: "NoNutrition" },
+			"*": { satiety: 150, health: 1, foodcategory: "NoNutrition" },
 		},
 		waterTightContainerProps: {
 			containable: true,
@@ -31,16 +31,16 @@
 				stack: { type: "item", code: "expandedfoods:wildpotentspiritportion-{fruit}" }
 			},
 			nutritionPropsPerLitreByType: {
-				"*-wolfberry": { saturation: 200, health: -2.5, intoxication: 2.5, foodcategory: "NoNutrition" },
-				"*-crowseye": { saturation: 200, health: -5, intoxication: 2.5, foodcategory: "NoNutrition" },
-				"*-seamango": { saturation: 200, health: -4, intoxication: 2.5, foodcategory: "NoNutrition" },
-				"*": { saturation: 200, "health": 1, "intoxication": 2.5, foodcategory: "NoNutrition" },
+				"*-wolfberry": { saturation: 100, health: -2.5, intoxication: 2.5, foodcategory: "NoNutrition" },
+				"*-crowseye": { saturation: 100, health: -5, intoxication: 2.5, foodcategory: "NoNutrition" },
+				"*-seamango": { saturation: 100, health: -4, intoxication: 2.5, foodcategory: "NoNutrition" },
+				"*": { saturation: 100, "health": 1, "intoxication": 2.5, foodcategory: "NoNutrition" },
 			},
 		},
 	},
 	transitionableProps: [{
     	type: "Cure",
-    	freshHours: { avg: 1344 },
+    	freshHours: { avg: 13440 },
     	transitionHours: { avg: 4032 },
     	transitionedStack: { type: "item", code: "wildpotentspiritportion-{fruit}" },
     	transitionRatio: 1
@@ -50,7 +50,7 @@
 	creativeinventoryStacks: [ { tabs: ["general", "liquids", "expandedfoods"], stacks: [ { type: "block", code: "game:woodbucket", attributes: { ucontents: [ { type:"item", code: "expandedfoods:wildpotentspiritportion-{fruit}", makefull: true } ] } } ] } ],
 	maxstacksize: 5000,
 	materialDensity: 200,
-	nutritionProps: { saturation: 2, health: 0.01, foodcategory: "NoNutrition" },
+	nutritionProps: { saturation: 1, health: 0.01, foodcategory: "NoNutrition" },
 	guiTransform: {
 		rotation: { x: 128, y: 40, z: 7 },
 		origin: { x: 0.5, y: 0, z: 0.5 },
