@@ -5,7 +5,7 @@
 	variantgroups: [
 		{ code: "fruit", "loadFromProperties": "wildcraftfruit:block/fruit" },
 	],
-	"skipVariants": ["*-pittedcherry", "*-pittedapricot", "*-pittedbreadfruit", "*-cashewwhole", "*-chinaberry", "*-beachalmondwhole", "*-lillypillywhite", "*-lillypillyblue", "*-lemon"],
+	"skipVariants": ["*-pittedcherry", "*-pittedapricot", "*-pittedbreadfruit", "*-cashewwhole", "*-chinaberry", "*-beachalmondwhole", "*-lillypillywhite", "*-lillypillyblue", "*-lemon", "*-blacknightshadeunripe"],
 	attributes: {
 		handbook: {
 			ignoreCreativeInvStacks: true
@@ -16,10 +16,10 @@
 		},
 		"inBowlShape": { "base": "game:block/food/meal/liquid" },
 		nutritionPropsWhenInMealByType: {
-			"*-wolfberry": { satiety: 270, health: -5, foodcategory: "NoNutrition" },
-			"*-crowseye": { satiety: 270, health: -10, foodcategory: "NoNutrition" },
-			"*-seamango": { satiety: 270, health: -8, foodcategory: "NoNutrition" },
-			"*": { satiety: 270, health: 0.5, foodcategory: "NoNutrition" },
+			"*-wolfberry": { satiety: 135, health: -5, foodcategory: "NoNutrition" },
+			"*-crowseye": { satiety: 135, health: -10, foodcategory: "NoNutrition" },
+			"*-seamango": { satiety: 135, health: -8, foodcategory: "NoNutrition" },
+			"*": { satiety: 135, health: 0.5, foodcategory: "NoNutrition" },
 		},
 		waterTightContainerProps: {
 			containable: true,
@@ -31,16 +31,16 @@
 				stack: { type: "item", code: "expandedfoods:wildstrongspiritportion-{fruit}" }
 			},
 			nutritionPropsPerLitreByType: {
-				"*-wolfberry": { saturation: 180, health: -5, intoxication: 2.0, foodcategory: "NoNutrition" },
-				"*-crowseye": { saturation: 180, health: -10, intoxication: 2.0, foodcategory: "NoNutrition" },
-				"*-seamango": { saturation: 180, health: -8, intoxication: 2.0, foodcategory: "NoNutrition" },
-				"*": { saturation: 180, "health": 0.5, "intoxication": 2.0, foodcategory: "NoNutrition" },
+				"*-wolfberry": { saturation: 90, health: -5, intoxication: 2.0, foodcategory: "NoNutrition" },
+				"*-crowseye": { saturation: 90, health: -10, intoxication: 2.0, foodcategory: "NoNutrition" },
+				"*-seamango": { saturation: 90, health: -8, intoxication: 2.0, foodcategory: "NoNutrition" },
+				"*": { saturation: 90, "health": 0.5, "intoxication": 2.0, foodcategory: "NoNutrition" },
 			},
 		},
 	},
 	transitionableProps: [{
     	type: "Cure",
-    	freshHours: { avg: 1344 },
+    	freshHours: { avg: 13440 },
     	transitionHours: { avg: 4032 },
     	transitionedStack: { type: "item", code: "wildpotentspiritportion-{fruit}" },
     	transitionRatio: 1
@@ -50,7 +50,7 @@
 	creativeinventoryStacks: [ { tabs: ["general", "liquids", "expandedfoods"], stacks: [ { type: "block", code: "game:woodbucket", attributes: { ucontents: [ { type:"item", code: "expandedfoods:wildstrongspiritportion-{fruit}", makefull: true } ] } } ] } ],
 	maxstacksize: 5000,
 	materialDensity: 200,
-	nutritionProps: { saturation: 1.8, health: 0.005, foodcategory: "NoNutrition" },
+	nutritionProps: { saturation: 0.9, health: 0.005, foodcategory: "NoNutrition" },
 	guiTransform: {
 		rotation: { x: 128, y: 40, z: 7 },
 		origin: { x: 0.5, y: 0, z: 0.5 },
