@@ -5,7 +5,7 @@
 	variantgroups: [
 		{ code: "fruit", "loadFromProperties": "wildcraftfruit:block/fruit" },
 	],
-	"skipVariants": ["*-pittedcherry", "*-pittedapricot", "*-pittedbreadfruit", "*-cashewwhole", "*-chinaberry", "*-beachalmondwhole", "*-lillypillywhite", "*-lillypillyblue", "*-lemon"],
+	"skipVariants": ["*-pittedcherry", "*-pittedapricot", "*-pittedbreadfruit", "*-cashewwhole", "*-chinaberry", "*-beachalmondwhole", "*-lillypillywhite", "*-lillypillyblue", "*-lemon", "*-blacknightshadeunripe"],
 	attributes: {
 		handbook: {
 			ignoreCreativeInvStacks: true
@@ -71,7 +71,7 @@
 	creativeinventoryStacks: [ { tabs: ["general", "liquids", "expandedfoods"], stacks: [ { type: "block", code: "game:woodbucket", attributes: { ucontents: [ { type:"item", code: "expandedfoods:wildstrongwineportion-{fruit}", makefull: true } ] } } ] } ],
 	maxstacksize: 5000,
 	materialDensity: 200,
-	nutritionProps: { saturation: 1.8, health: 0.005, foodcategory: "Fruit" },
+	nutritionProps: { saturation: 0.9, health: 0.005, foodcategory: "Fruit" },
 	guiTransform: {
 		rotation: { x: 128, y: 40, z: 7 },
 		origin: { x: 0.5, y: 0, z: 0.5 },
