@@ -3,7 +3,7 @@
     "op": "remove",
     "path": "/transitionableProps",
     "side": "server",
-    "file": "wildcraftfruit:itemtypes/liquid/alcohol/cider.json"
+    "file": "wildcraftfruit:itemtypes/liquid/cider.json"
   },
   {
     "op": "add",
@@ -39,7 +39,7 @@
       }
     ],
     "side": "server",
-    "file": "wildcraftfruit:itemtypes/liquid/alcohol/cider.json"
+    "file": "wildcraftfruit:itemtypes/liquid/cider.json"
   },
   {
     "op": "addmerge",
@@ -57,6 +57,6 @@
 		"*": { satiety: 80, health: 0, foodcategory: "Fruit" },
     },
     "side": "server",
-    "file": "wildcraftfruit:itemtypes/liquid/alcohol/cider.json"
+    "file": "wildcraftfruit:itemtypes/liquid/cider.json"
   },
 ]
