@@ -14,7 +14,7 @@
       "requiresContainer": true
     },
     "side": "server",
-    "file": "wildcraftfruit:itemtypes/liquid/alcohol/rawjuice.json"
+    "file": "wildcraftfruit:itemtypes/liquid/rawjuice.json"
   },
   {
     "op": "add",
@@ -50,6 +50,6 @@
       }
     ],
     "side": "server",
-    "file": "wildcraftfruit:itemtypes/liquid/alcohol/rawjuice.json"
+    "file": "wildcraftfruit:itemtypes/liquid/rawjuice.json"
   }
 ]
