@@ -5,6 +5,10 @@
 	},
 	"textureWidth": 16,
 	"textureHeight": 16,
+	"textures": {
+		"cured": "game:item/food/meat/cured-smoked",
+		"white1": "game:block/cloth/wool/white1"
+	},
 	"elements": [
 		{
 			"name": "sausage",
