@@ -6,7 +6,7 @@
       {
         "type": "Cure",
         "freshHours": {
-          "avg": 672
+          "avg": 6720
         },
         "transitionHours": {
           "avg": 2016
@@ -25,7 +25,7 @@
     "op": "addmerge",
     "path": "/attributes/nutritionPropsWhenInMeal",
     "value": {
-        "saturation": 160,
+        "saturation": 80,
         "foodcategoryByType": {
             "*-spelt": "grain", 
             "*-rice": "grain",             
