@@ -69,6 +69,11 @@ NEW FOOD ADDITIONS FINALLY???
 -- mixed herbs added
 -- herbal soft dough added
 -- Wildcraft fruits updated
+-- Patches updated to new file paths - DONE?
+-- Updated to use new names
+-- Wildcraft Aged liquids disabled when Expanded Foods is installed
+
+
 - Dialogue added to Kitchenware Trader; readjusted code to push text to en.json
 - added meatloaf?
 - Soulstorm slop accepts all poisonous mushrooms and Wildcraft poisonous berries
@@ -79,11 +84,12 @@ NEW FOOD ADDITIONS FINALLY???
 - Cured deluxe sausage recipes fixed - DONE!!!
 - Liquid gelatin and pre-gelatin no longer allowed in fruit bar or muffin recipes - DONE!!!
 - Cider/wine adjusted to have half nutrition but last 10 times as long - DONE!!!
+- Spirits adjusted to have half nutrition but take 10 times as long to cure - DONE!!!
 - Raw fish nutrition adjusted to match vanilla - DONE!!!
 - Seaweed patch fixed - DONE!!!
 - Seaweed nutrition works in sushi - DONE!!!
 - Cooked veggies can be added to salad
-- Sausage shapes have textures, should fix crashing
+- Sausage shapes have textures, should fix crashing - DONE?
 
 - New 1.20 clays integrated
 - Chef hat + saddle makes Chef Saddle
